Fixed scrolls and UI overflows. Will need VWF-side trashcan support

--- a/source/view/index.css
+++ b/source/view/index.css
@@ -114,8 +114,13 @@ a:active {
 }
 
 .blocklySvg {
+    height: 100%;
     background-color: rgba( 0, 0, 0, 0.25 );
     border-color: rgba( 255, 255, 255, 0.25 );
+}
+
+.blocklyToolboxDiv {
+    overflow: hidden;
 }
 
 .blocklyFlyoutBackground {
@@ -202,15 +207,15 @@ a:active {
 }
 
 #blocklyScrollDiv {
-    height: 700px;
+    height: 100%;
     min-height: 256px;
     max-height: 764px;
-    overflow-y: scroll;
+    overflow-y: hidden;
     overflow-x: hidden;
 }
 
 #blocklyDiv {
-    height: 764px;
+    height: 100%;
     width: 100%;
     overflow: hidden;
 }
